change banner position

--- a/hexo/themes/landscape/source/css/_partial/header.styl
+++ b/hexo/themes/landscape/source/css/_partial/header.styl
@@ -31,7 +31,7 @@
   height: 100%
   background: url(banner-url) center #000
   background-size: cover
-  backgournd-position-y: -150%
+  background-position-y: -150%
   z-index: -1
 
 #header-title
