--- a/themes/landscape/source/css/_variables.styl
+++ b/themes/landscape/source/css/_variables.styl
@@ -19,13 +19,13 @@ color-pinterest = #cb2027
 color-google = #dd4b39
 
 // Fonts
-font-sans = "Helvetica Neue", Helvetica, Arial, sans-serif
+font-sans = sans-serif
 font-serif = Georgia, "Times New Roman", serif
 font-mono = "Source Code Pro", Consolas, Monaco, Menlo, Consolas, monospace
 font-icon = FontAwesome
 font-icon-path = "fonts/fontawesome-webfont"
 font-icon-version = "4.0.3"
-font-size = 14px
+font-size = 20px
 line-height = 1.6em
 line-height-title = 1.1em
 
@@ -56,5 +56,5 @@ columns = main-column + _sidebar-column
 
 // Media queries
 mq-mobile = "screen and (max-width: 479px)"
-mq-tablet = "screen and (min-width: 480px) and (max-width: 767px)"
-mq-normal = "screen and (min-width: 768px)"
+mq-tablet = "screen and (min-width: 480px) and (max-width: 1100px)"
+mq-normal = "screen and (min-width: 1101px)"
